# solana-dino-game

./: package-lock.json  package.json
solana-dino-program/: Anchor.toml  Cargo.toml
solana-dino-program/programs/solana-dino-program/: Cargo.toml
solana-dino-program/programs/solana-dino-program/src/: lib.rs
src/app/: page.tsx
src/app/idl/: solana_dino_game.json
