# [workspace]
# members = [
#     "programs/*"
# ]
# resolver = "2"

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1
# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1


[package]
name = "solana-dino-program"
version = "0.1.0"
description = "Solana Dino Game Scoreboard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_dino_program"

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
mocha = "10.2.0"
chai = "4.3.7"